Fix footer on mobile

--- a/css/_base.scss
+++ b/css/_base.scss
@@ -208,8 +208,6 @@ h6 {
 }
 
 #main-content {
-  height: 100%;
-  min-height: 100%;
   padding: 0 15px 15px 15px;
 }
 
