--- a/css/_variables.scss
+++ b/css/_variables.scss
@@ -6,6 +6,7 @@ $min-width: 380px;
 
 // Width at which header menu is hidden.
 $header-collapse-width: 500px;
+$mobile-header-height: 56px;
 
 $header-font-stack: "Raleway", "Helvetica Neue", Helvetica, Arial, sans-serif;
 $body-font-stack: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
